bubble shot link added in index.html

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 </div>
                 <div class="project-card">
                     <div class="project-img">
-                        <img src="pictures/game2.avif" alt="Bubble shooter Game">
+                        <a href="https://legendarybeast.github.io/canvas-game/"><img src="pictures/game2.avif" alt="Bubble shooter Game"></a>
                     </div>
                     <div class="project-info">
                         <h3>Buddy Shoot</h3>
