shoot your buddy link added in index.html

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 </div>
                 <div class="project-card">
                     <div class="project-img">
-                        <img src="pictures/edu.jpeg" alt="A Edutech Platform work in progress.">
+                        <a href="https://shoot-yb.netlify.app/"><img src="pictures/edu.jpeg" alt="A Edutech Platform work in progress."></a>
                     </div>
                     <div class="project-info">
                         <h3>ourUnion</h3>
