--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="projects-grid">
                 <div class="project-card">
                     <div class="project-img">
-                        <img src="pictures/game.jpeg">
+                        <a href="https://shoot-yb.netlify.app/"><img src="pictures/game.jpeg"></a>
                     </div>
                     <div class="project-info">
                         <h3>Shoot Your Buddy</h3>
@@ -59,7 +59,7 @@
                 </div>
                 <div class="project-card">
                     <div class="project-img">
-                        <a href="https://shoot-yb.netlify.app/"><img src="pictures/edu.jpeg" alt="A Edutech Platform work in progress."></a>
+                        <img src="pictures/edu.jpeg" alt="A Edutech Platform work in progress.">
                     </div>
                     <div class="project-info">
                         <h3>ourUnion</h3>
